Fix navbar padding to match homepage container spacing

--- a/starlight-ng/src/app/components/navbar/navbar.component.css
+++ b/starlight-ng/src/app/components/navbar/navbar.component.css
@@ -13,14 +13,10 @@
 }
 
 .navbar-container {
-  max-width: none;
-  padding: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 70px;
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 /* ================== BRAND SECTION ================== */
